// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`text-editor Renders \`text-editor\` with all parameters 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close="close"
  >
    <span>
      Text editor title
    </span>
     
    <text-editor-field-stub
      buttons=""
      config="[object Object]"
      errormessages=""
      extrabuttons=""
      label="Text editor label"
      name="text"
      value="Text"
    />
     
    <button
      class="v-btn v-btn--flat theme--light"
      type="button"
    >
      <div
        class="v-btn__content"
      >
        Cancel
      </div>
    </button>
    <button
      class="primary v-btn theme--light"
      type="submit"
    >
      <div
        class="v-btn__content"
      >
        Submit
      </div>
    </button>
  </div>
</form>
`;

exports[`text-editor Renders \`text-editor\` with empty modal 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close="close"
  >
    <span>
      Text editor
    </span>
     
    <text-editor-field-stub
      buttons=""
      config="[object Object]"
      errormessages=""
      extrabuttons=""
      label=""
      name="text"
      value=""
    />
     
    <button
      class="v-btn v-btn--flat theme--light"
      type="button"
    >
      <div
        class="v-btn__content"
      >
        Cancel
      </div>
    </button>
    <button
      class="primary v-btn theme--light"
      type="submit"
    >
      <div
        class="v-btn__content"
      >
        Submit
      </div>
    </button>
  </div>
</form>
`;
